# FreshProject

./: CMakeLists.txt  README.md
cmake/: LinkGBenchmark.cmake
source/: main.cpp
source/Project/benchmark/: Benchmark.cpp  Benchmark.h  CMakeLists.txt
source/Project/private/: CMakeLists.txt
source/Project/public/: CMakeLists.txt
source/Project/test/: CMakeLists.txt  Tests.cpp
